Sun May 27 12:13:29 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore Xapian API class constructor taking
	  Internal& instead of Internal* (as Query does, to avoid an
	  ambiguity for Query(NULL).

Sun May 27 12:12:45 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Fix to use tabs for indentation in
	  a couple of places where we were using spaces.

Sun May 27 11:48:56 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Don't name exception object we
	  don't inspect.

Sun May 27 10:08:25 GMT 2012  Olly Betts <olly@survex.com>

	* perl/perl.i: Pass 0 instead of NULL for non-pointer parameter to
	  av_fetch (spotted due to GCC 4.7 warning).

Sun May 27 07:32:47 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Remove superfluous ';' after
	  "namespace { [...] }".

Sun May 27 07:29:48 GMT 2012  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Have a single copyright statement
	  at the top of the script (in a $copyright variable), and substitute
	  this into the generated script.

Sun May 27 01:52:08 GMT 2012  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Use new XAPIAN_NOTHROW markers
	  in API headers to avoid generate exception handling code around
	  the calls SWIG generates to such functions and methods.

Sun May 27 01:51:28 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-head.i: Hide XAPIAN_CONST_FUNCTION, XAPIAN_PURE_FUNCTION, and
	  XAPIAN_NOTHROW from SWIG.

Sun May 27 01:40:32 GMT 2012  Olly Betts <olly@survex.com>

	* generic/except.i: Don't name exceptions objects we don't inspect.

Tue May 22 08:21:43 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac,php/Makefile.am: Fix "make check" for PHP to work in a
	  VPATH build using a release tarball.
